# erynthis-api-client

./: .gitignore  LICENSE  README.md  README.txt  biome.json  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  http.rs  lib.rs  main.rs  state.rs
src/components/: AuthTab.tsx  BodyTab.tsx  CopyButton.tsx  Dropdown.tsx  EnvironmentModal.tsx  GenerateCodeTab.tsx  HeadersTab.tsx  Modal.tsx  ParamsTab.tsx  RequestPanel.tsx  ResponsePanel.tsx  Sidebar.tsx  SyntaxHighlighter.tsx  WelcomeScreen.tsx  syntax-highlighter.tsx  theme-provider.tsx  title-bar.tsx  welcome.tsx
src/components/environments/: environment-content.tsx  environment-modal.tsx  environment-sidebar.tsx  new-environment-modal.tsx  variable-row.tsx  variables-table.tsx
src/components/panels/: request-panel.tsx  response-panel.tsx
src/components/sidebar/: folder-item.tsx  request-item.tsx  sidebar-header.tsx  sidebar.tsx
src/components/tabs/: auth-tab.tsx  body-tab.tsx  headers-tab.tsx  params-tab.tsx  response-body-tab.tsx  (+1 more)
src/constants/: index.ts
src/hooks/: use-drag-resize.ts
src/providers/: theme-provider.tsx
src/services/: httpService.ts
src/store/: environment-store.ts  environmentStore.ts  http-store.ts  httpStore.ts  shiki-store.ts  shikiStore.ts  ui-store.ts  uiStore.ts
src/styles/: globals.css
src/types/: data.ts  http.ts
src/utils/: animations.ts  codeTemplates.ts  http.ts  index.ts  variables.ts
(+30 files in other folders)
